--- a/deploy/cert-manager-webhook-dns-manager/templates/deployment.yaml
+++ b/deploy/cert-manager-webhook-dns-manager/templates/deployment.yaml
@@ -23,7 +23,7 @@ spec:
       serviceAccountName: {{ include "example-webhook.fullname" . }}
       containers:
         - name: {{ .Chart.Name }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           args:
             - --tls-cert-file=/tls/tls.crt
