--- a/deploy/cert-manager-webhook-dns-manager/values.yaml
+++ b/deploy/cert-manager-webhook-dns-manager/values.yaml
@@ -6,15 +6,15 @@
 # solve the DNS01 challenge.
 # This group name should be **unique**, hence using your own company's domain
 # here is recommended.
-groupName: acme.mycompany.com
+groupName: acme.xzzpig.com
 
 certManager:
   namespace: cert-manager
   serviceAccountName: cert-manager
 
 image:
-  repository: mycompany/webhook-image
-  tag: latest
+  repository: ghcr.io/xzzpig/cert-manager-webhook-dns-manager
+  tag: null
   pullPolicy: IfNotPresent
 
 nameOverride: ""
